syntax = "proto3";

package com.marrrang.grpc.lib;

option java_multiple_files = true;
option java_package = "com.marrrang.grpc.lib";
option java_outer_classname = "MarrrangProto";

service Marrrang {
  rpc SayHello (HelloRequest) returns (HelloReply);
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}